# hwpx-toolkit

./: .env.example  .gitignore  LICENSE  NOTICE  README.ko.md  README.md  pyproject.toml
docs/: oss-application.md  posting-drafts.md
examples/: extract_text.py  generate_report.py  vectorize_docs.py
hwpx_toolkit/: __init__.py  extractor.py  generator.py  mcp_server.py  vectorizer.py  writer.py
