[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hwpx-toolkit"
version = "10.0.0"
description = "Python toolkit for HWP/HWPX document processing, vectorization, and AI integration"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tommy Keum" }]
keywords = ["hwp", "hwpx", "korean", "document", "nlp", "rag", "vectorization", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Office/Business",
    "Natural Language :: Korean",
]
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.7.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
hwp5 = ["pyhwp>=0.1.0"]
dev = ["pytest", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/hwpx-toolkit"
Repository = "https://github.com/YOUR_USERNAME/hwpx-toolkit"
Issues = "https://github.com/YOUR_USERNAME/hwpx-toolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hwpx_toolkit*"]
